--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="css/stylev2.css" />
+    <link rel="stylesheet" type="text/css" href="stylev2.css" />
   </head>
   <body>
     <div class="container my-header">
