--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="stylev2.css" />
-=======
     <link rel="stylesheet" type="text/css" href="style.css" />
->>>>>>> refs/remotes/origin/main
   </head>
   <body>
     <div class="container my-header">
@@ -28,7 +24,7 @@
         </div>
         <div class="col-sm-3 gen-col my-center my-button">
           <a
-            href="https://www.dropbox.com/scl/fi/gjav7t8k9j73y4gfaaylx/Grant_Sackmann_Resume.pdf?rlkey=vlzqkltjvvouz1mnkzuy1a5se&st=1mtz3cgv&dl=0"
+            href="content/Grant_Sackmann_Resume.pdf"
             target="_blank"
           >
             <button class="btn btn-primary my-button" style="text-wrap: nowrap">
