--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-sm-3 gen-col my-center my-button">
           <a
-            href="content/Grant_Sackmann_Resume.pdf"
+            href="content/resume"
             target="_blank"
           >
             <button class="btn btn-primary my-button" style="text-wrap: nowrap">
