--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grant Sackmann</title>
-    <link rel="icon" href="images/GSlogo.png" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
     <div class="container my-header">
       <div class="row">
         <div class="col-sm-2 gen-col my-center logo-col">
-          <img src="images/GSlogo.png" class="img-fluid my-logo" />
+          <img src="images/GSlogo.png" class="img-fluid my-logo" alt="site logo" />
         </div>
         <div class="col gen-col name">
           <h2 class="my-text my-name">Grant Sackmann</h2>
@@ -25,6 +25,7 @@
         <div class="col-sm-3 gen-col my-center my-button">
           <a
             href="content/Grant_Sackmann_Resume.pdf"
+            aria-label="redirect button to my resume."
             target="_blank"
           >
             <button class="btn btn-primary my-button" style="text-wrap: nowrap">
@@ -38,7 +39,8 @@
       <div class="row">
         <div class="col-sm my-center" id="headshot-col">
           <img
-            src="images/headshot.png"
+            src="images/headshot.webp"
+            alt="Portrait photo of Grant Sackmann"
             class="img-fluid"
             id="headshot-photo"
           />
@@ -183,6 +185,7 @@
         </div>
         <button
           class="carousel-control-prev"
+          alt="button to view previous image in carousel."
           type="button"
           data-bs-target="#carouselExampleAutoplaying"
           data-bs-slide="prev"
@@ -192,6 +195,7 @@
         </button>
         <button
           class="carousel-control-next"
+          alt="Button to view next image in carousel."
           type="button"
           data-bs-target="#carouselExampleAutoplaying"
           data-bs-slide="next"
@@ -219,7 +223,8 @@
             <a
               href="mailto:grant.sackmann@icloud.com"
               target="_blank"
-              alt="compose email to grant sackmann"
+              alt="compose email to grant.sackmann@icloud.com"
+              aria-label="Email me."
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -242,7 +247,8 @@
             <a
               href="https://www.linkedin.com/in/grant-sackmann"
               target="_blank"
-              alt="grant sackmann's linkedin profile"
+              alt="Linkedin profile grant-sackmann"
+              aria-label="See my Linkedin profile."
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -266,7 +272,8 @@
             <a
               href="https://www.instagram.com/grantis_sackmn"
               target="_blank"
-              alt="grant sackmann's instagram profile"
+              alt="Instagram handle @grantis_sackmann"
+              aria-label="Go to my Instagram."
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
