adding met and alt tags for seo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <div class="container my-header">
       <div class="row">
         <div class="col-sm-2 gen-col my-center logo-col">
-          <img src="images/GSlogo.png" class="img-fluid my-logo" alt="site logo" />
+          <img
+            src="images/GSlogo.png"
+            class="img-fluid my-logo"
+            alt="site logo"
+            meta="Personal Site logo"
+          />
         </div>
         <div class="col gen-col name">
           <h2 class="my-text my-name">Grant Sackmann</h2>
@@ -41,6 +46,7 @@
           <img
             src="images/headshot.webp"
             alt="Portrait photo of Grant Sackmann"
+            meta="Portrait photo, Grant Sackmann"
             class="img-fluid"
             id="headshot-photo"
           />
@@ -76,6 +82,8 @@
             <div class="content">
               <img
                 src="images/carousel/permafrostsampling 2.jpeg"
+                alt="sampling permafrost in Alaska."
+                meta="University of Alaska Fairbanks, Grinnell College, Special topic course, BIO-195, microbiology, student research"
                 class="img-fluid"
               />
               <p class="my-caption my-text">
@@ -86,7 +94,12 @@
           </div>
           <div class="carousel-item">
             <div class="content">
-              <img src="images/carousel/habesha.jpg" class="img-fluid" />
+              <img
+                src="images/carousel/habesha.jpg"
+                class="img-fluid"
+                meta="Grinnell College Student Organization, Joe Rosenfield Center, habesha, Ethiopian"
+                alt="Habesha Student Organization "
+              />
               <p class="my-caption my-text">
                 Habesha Student Organization group photo.
               </p>
@@ -96,6 +109,8 @@
             <div class="content">
               <img
                 src="images/carousel/wcconstruction.jpeg"
+                meta="Grinnell College STEW Makerspace, Wilson Center Catalyst Fund,"
+                alt="Makerspace student construction"
                 class="img-fluid"
               />
               <p class="my-caption my-text">
@@ -106,7 +121,12 @@
           </div>
           <div class="carousel-item">
             <div class="content">
-              <img src="images/carousel/rodentsampling.JPG" class="img-fluid" />
+              <img
+                src="images/carousel/rodentsampling.JPG"
+                alt="South African savanna rodent sampling"
+                class="img-fluid"
+                meta="Grinnell College Global Learning Program, fieldwork, rodent sampling, Special topic course, Mpumalanga South Africa, Kruger National Park, Organization for tropical studies, Skukuza Science Leadership Initiative"
+              />
               <p class="my-caption my-text">
                 Processing rodent samples in Kruger National Park.
               </p>
@@ -114,7 +134,12 @@
           </div>
           <div class="carousel-item">
             <div class="content">
-              <img src="images/carousel/salecture.jpeg" class="img-fluid" />
+              <img
+                src="images/carousel/salecture.jpeg"
+                alt="Savanna ecology field lecture in South Africa"
+                class="img-fluid"
+                meta="Grinnell College Global Learning Program, savanna ecology, student research, Mpumalanga South Africa, Kruger National Park, Organization for tropical studies, South African savanna"
+              />
               <p class="my-caption my-text">
                 Special topic biology class receiving lecture on savanna ecology
                 in South Africa.
@@ -123,7 +148,12 @@
           </div>
           <div class="carousel-item">
             <div class="content">
-              <img src="images/carousel/gwc.jpg" class="img-fluid" />
+              <img
+                src="images/carousel/gwc.jpg"
+                alt="Girls Who Code Afterschool program"
+                class="img-fluid"
+                meta="Girls Who Code, Grinnell Middle School, Iowa, Minorities in STEM"
+              />
               <p class="my-caption my-text">
                 Lead Facilitator for Girls Who Code at local middle school.
               </p>
@@ -133,7 +163,9 @@
             <div class="content">
               <img
                 src="images/carousel/grinnellcomputingclub.JPG"
+                alt="Grinnell College Computing Club photo"
                 class="img-fluid"
+                meta="Grinnell College Computer Science, Grinnell College Student Organization"
               />
               <p class="my-caption my-text">
                 Grinnell Computing Club group photo.
@@ -142,7 +174,12 @@
           </div>
           <div class="carousel-item">
             <div class="content">
-              <img src="images/carousel/summercamp.jpeg" class="img-fluid" />
+              <img
+                src="images/carousel/summercamp.jpeg"
+                alt="South Carolina Governor's School for Science and Mathematics day camp"
+                class="img-fluid"
+                meta="South Carolina Governor's School for Science and Mathematics, summer day camp"
+              />
               <p class="my-caption my-text">
                 Teaching Assistant for South Carolina Governor's Shool iTEAMS
                 Xtreme day camp.
@@ -153,7 +190,9 @@
             <div class="content">
               <img
                 src="images/carousel/gssmgraduation.jpeg"
+                alt="South Carolina Governor's School for Science and Mathematics Class of 2023 Graduation"
                 class="img-fluid"
+                meta="South Carolina Governor's School for Science and Mathematics Graduation, Class of 2023"
               />
               <p class="my-caption my-text">
                 Graduating from South Carolina Governor's School for Science and
@@ -165,7 +204,9 @@
             <div class="content">
               <img
                 src="images/carousel/engageoutreach.jpeg"
+                alt="South Carolina Governor's School for Science and Mathematics Outreach program"
                 class="img-fluid"
+                meta="South Carolina Governor's School School for Science and Mathematics ENGAGE, Robotics outreach"
               />
               <p class="my-caption my-text">
                 Demoing FTC robot to South Carolina Governor's School ENGAGE
@@ -175,7 +216,12 @@
           </div>
           <div class="carousel-item">
             <div class="content">
-              <img src="images/carousel/modernphysics.jpg" class="img-fluid" />
+              <img
+                src="images/carousel/modernphysics.jpg"
+                alt="Modern Physics Students photo"
+                class="img-fluid"
+                meta="South Carolina Governor's School for Science and Mathematics physics, Einstein's special relativity, Mark Godwin's Physics Class"
+              />
               <p class="my-caption my-text">
                 High School Modern Physics class adapting Einstein's mass-energy
                 equivalence for special relativity.
