converted all carousel images to webp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Grant Sackmann's personal website carefully curated with with image updates demonstrating what he has been up to professionally and academically">
     <title>Grant Sackmann</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link
@@ -81,7 +82,7 @@
           <div class="carousel-item active">
             <div class="content">
               <img
-                src="images/carousel/permafrostsampling 2.jpeg"
+                src="images/carousel/permafrostsampling 2.webp"
                 alt="sampling permafrost in Alaska."
                 meta="University of Alaska Fairbanks, Grinnell College, Special topic course, BIO-195, microbiology, student research"
                 class="img-fluid"
@@ -95,7 +96,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/habesha.jpg"
+                src="images/carousel/habesha.webp"
                 class="img-fluid"
                 meta="Grinnell College Student Organization, Joe Rosenfield Center, habesha, Ethiopian"
                 alt="Habesha Student Organization "
@@ -108,7 +109,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/wcconstruction.jpeg"
+                src="images/carousel/wcconstruction.webp"
                 meta="Grinnell College STEW Makerspace, Wilson Center Catalyst Fund,"
                 alt="Makerspace student construction"
                 class="img-fluid"
@@ -122,7 +123,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/rodentsampling.JPG"
+                src="images/carousel/rodentsampling.webp"
                 alt="South African savanna rodent sampling"
                 class="img-fluid"
                 meta="Grinnell College Global Learning Program, fieldwork, rodent sampling, Special topic course, Mpumalanga South Africa, Kruger National Park, Organization for tropical studies, Skukuza Science Leadership Initiative"
@@ -135,7 +136,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/salecture.jpeg"
+                src="images/carousel/salecture.webp"
                 alt="Savanna ecology field lecture in South Africa"
                 class="img-fluid"
                 meta="Grinnell College Global Learning Program, savanna ecology, student research, Mpumalanga South Africa, Kruger National Park, Organization for tropical studies, South African savanna"
@@ -149,7 +150,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/gwc.jpg"
+                src="images/carousel/gwc.webp"
                 alt="Girls Who Code Afterschool program"
                 class="img-fluid"
                 meta="Girls Who Code, Grinnell Middle School, Iowa, Minorities in STEM"
@@ -162,7 +163,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/grinnellcomputingclub.JPG"
+                src="images/carousel/grinnellcomputingclub.webp"
                 alt="Grinnell College Computing Club photo"
                 class="img-fluid"
                 meta="Grinnell College Computer Science, Grinnell College Student Organization"
@@ -175,7 +176,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/summercamp.jpeg"
+                src="images/carousel/summercamp.webp"
                 alt="South Carolina Governor's School for Science and Mathematics day camp"
                 class="img-fluid"
                 meta="South Carolina Governor's School for Science and Mathematics, summer day camp"
@@ -189,7 +190,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/gssmgraduation.jpeg"
+                src="images/carousel/gssmgraduation.webp"
                 alt="South Carolina Governor's School for Science and Mathematics Class of 2023 Graduation"
                 class="img-fluid"
                 meta="South Carolina Governor's School for Science and Mathematics Graduation, Class of 2023"
@@ -203,7 +204,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/engageoutreach.jpeg"
+                src="images/carousel/engageoutreach.webp"
                 alt="South Carolina Governor's School for Science and Mathematics Outreach program"
                 class="img-fluid"
                 meta="South Carolina Governor's School School for Science and Mathematics ENGAGE, Robotics outreach"
@@ -217,7 +218,7 @@
           <div class="carousel-item">
             <div class="content">
               <img
-                src="images/carousel/modernphysics.jpg"
+                src="images/carousel/modernphysics.webp"
                 alt="Modern Physics Students photo"
                 class="img-fluid"
                 meta="South Carolina Governor's School for Science and Mathematics physics, Einstein's special relativity, Mark Godwin's Physics Class"
