--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Grant Sackmann's personal website carefully curated with with image updates demonstrating what he has been up to professionally and academically">
-    <title>Grant Sackmann</title>
+    <title>Grant Sackmann Personal Website</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
