--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Grant Sackmann's personal website carefully curated with with image updates demonstrating what he has been up to professionally and academically">
+    <meta name="description" content="The personal website of Grant Sackmann updated with images documenting his professional and academic activity. Additionly, embededings to his resume and further contacts">
     <title>Grant Sackmann Personal Website</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link
